nenolod     2007/05/20 07:44:08 UTC	(20070520-8283)
  Log:
  - convert checks into assertions like in r8279.
  

  Changes:	Modified:
  +4 -3		trunk/src/authcookie.c (File Modified) 


nenolod     2007/05/20 07:40:43 UTC	(20070520-8281)
  Log:
  - if (!cptr) return -> return_if_fail(cptr != NULL). sendq/recvq 
    functions should always have valid connection objects passed to them.
  

  Changes:	Modified:
  +9 -12	trunk/src/datastream.c (File Modified) 


nenolod     2007/05/20 06:47:41 UTC	(20070520-8279)
  Log:
  - fix grammatical error in temporary registration text
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/register.c (File Modified) 


nenolod     2007/05/19 06:30:38 UTC	(20070519-8277)
  Log:
  - ok, really make this chanserv: stuff work
  

  Changes:	Modified:
  +28 -3	trunk/modules/chanserv/main.c (File Modified) 


nenolod     2007/05/19 05:34:42 UTC	(20070519-8275)
  Log:
  - fix "ChanServ:" commands
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/main.c (File Modified) 


nenolod     2007/05/19 05:31:46 UTC	(20070519-8273)
  Log:
  - unbreak !commands
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/main.c (File Modified) 


nenolod     2007/05/19 05:16:25 UTC	(20070519-8271)
  Log:
  - allow ChanServ to be addressed by name, e.g. "ChanServ: kick nenolod foobarbaz"
  

  Changes:	Modified:
  +4 -2		trunk/modules/chanserv/main.c (File Modified) 


nenolod     2007/05/19 00:32:20 UTC	(20070519-8269)
  Log:
  - these were outdated like whoa
  

  Changes:	Modified:
  +52 -44	trunk/INSTALL (File Modified) 
  +34 -32	trunk/README (File Modified) 


jilles      2007/05/17 23:57:54 UTC	(20070517-8267)
  Log:
  Add alis (advanced list service) from atheme-modules,
  fixed so it works with current atheme and has a full copy
  of the ratbox-services copyright notice.
  

  Changes:	Modified:
  +1 -0		trunk/contrib/Makefile.in (File Modified) 
  +418 -0	trunk/contrib/ircd_alis.c (File Added) 

